signup機能の作成

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+  a(href="/login") ログイン
+  
+  p
+  a(href="/users/signup") 新規登録
+  
