勉強内容の保存

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,8 @@ extends layout
 
 block content
   a(href="/login") ログイン
-  
   p
   a(href="/users/signup") 新規登録
+  p 
+  a(href="/study/new") 勉強内容の保存
   
