--- a/views/index.pug
+++ b/views/index.pug
@@ -5,5 +5,7 @@ block content
   p
   a(href="/users/signup") 新規登録
   p 
-  a(href="/study/new") 勉強内容の保存
+  a(href="/study") 勉強内容の一覧
+  p 
+  a(href="/review") 今日の復習内容
   
