--- a/views/study-contents.pug
+++ b/views/study-contents.pug
@@ -5,6 +5,7 @@ block content
   if hasContents
     h3 勉強内容の一覧
     each content in studyContent
-      p #{content.studyContents}
-      p #{content.studyDate}
+      p #{content.studyContents}： #{content.studyDate}
+
+    a(href="/study/new") 勉強内容の保存
           
