--- a/views/review-contents.pug
+++ b/views/review-contents.pug
@@ -1,10 +1,10 @@
 extends layout
 
 block content
-  - var hasContents = reviewContent.length > 0
+  - var hasContents = reviewContents.length > 0
   if hasContents
     h3 復習内容の一覧
-      each content in reviewContent
-        p #{content.review_contents.studyContents}： #{content.reviewDate}
+      each content in reviewContents 
+        p #{content.study_contents}： #{content.review_date}
 
     
