--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -11,12 +11,18 @@
   </head>
 
   <body class="text-center">
+
     <form class="form-signin" method="post" action="/users/signup">
       <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
       <p>名前を入力して下さい</p>
       <label for="inputName" class="sr-only">Email address</label>
       <input type="name" name="name" id="inputName" class="form-control" placeholder="user name" required autofocus>
       <p>メールアドレスを入力して下さい</p>
+      <% if (isUsed) { %>
+        <div class="alert alert-info" role="alert">
+          このメールアドレスはすでに使われています
+        </div>
+      <% }; %>
       <label for="inputEmail" class="sr-only">Email address</label>
       <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
       <p>パスワードを入力して下さい</p>
