--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand nav-link">Review Mnager</a>
+      <a href="/review" class="navbar-brand nav-link">Review Mnager</a>
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -9,12 +9,12 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a href="/logout" class="nav-link">復習一覧</a>
         </li>
         <li class="nav-item">
           <a href="/logout" class="nav-link">勉強一覧</a>
-        </li>
+        </li> -->
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
