--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,6 +3,7 @@
 <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
 <script src="/javascript/jquery-3.6.0.slim.min.js"></script>
 <script src="/javascript/bootstrap.min.js"></script>
+<script src="/javascript/review.js"></script>
 <title>Review Manager</title>
 
 <style>
