--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,10 +11,10 @@
       <ul class="navbar-nav mr-auto">
         <!-- <li class="nav-item">
           <a href="/logout" class="nav-link">復習一覧</a>
-        </li>
-        <li class="nav-item">
-          <a href="/logout" class="nav-link">勉強一覧</a>
         </li> -->
+        <li class="nav-item">
+          <a href="/study" class="nav-link">勉強一覧</a>
+        </li>
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
