--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,12 +15,15 @@
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <% if (isWrong) { %>
         <div class="alert alert-info" role="alert">
-          メールアドレス、またはパスワードが異なります
+          ユーザーネーム、またはパスワードが異なります
         </div>
       <% }; %>
-      <p>メールアドレスを入力して下さい</p>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <!-- <p>メールアドレスを入力して下さい</p> -->
+      <!-- <label for="inputEmail" class="sr-only">Email address</label>
+      <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus> -->
+      <p>ユーザーネームを入力して下さい</p>
+      <label for="inputName" class="sr-only">Email address</label>
+      <input type="name" name="name" id="inputName" class="form-control" placeholder="user name" required autofocus>
       <p>パスワードを入力して下さい</p>
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
