--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,17 +14,17 @@
 
     <form class="form-signin" method="post" action="/users/signup">
       <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
-      <p>名前を入力して下さい</p>
-      <label for="inputName" class="sr-only">Email address</label>
-      <input type="name" name="name" id="inputName" class="form-control" placeholder="user name" required autofocus>
-      <p>メールアドレスを入力して下さい</p>
+      <p>ユーザーネームを入力して下さい</p>
       <% if (isUsed) { %>
         <div class="alert alert-info" role="alert">
-          このメールアドレスはすでに使われています
+          このユーザーネームはすでに使われています
         </div>
       <% }; %>
+      <label for="inputName" class="sr-only">Email address</label>
+      <input type="name" name="name" id="inputName" class="form-control" placeholder="user name" required autofocus>
+      <!-- <p>メールアドレスを入力して下さい</p>
       <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus> -->
       <p>パスワードを入力して下さい</p>
       <label for="inputPassword" class="sr-only">Password</label>
       <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
