--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,9 +9,9 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <!-- <li class="nav-item">
-          <a href="/logout" class="nav-link">復習一覧</a>
-        </li> -->
+        <li class="nav-item">
+          <a href="/review" class="nav-link">復習一覧</a>
+        </li>
         <li class="nav-item">
           <a href="/study" class="nav-link">勉強一覧</a>
         </li>
