--- a/views/review-contents.ejs
+++ b/views/review-contents.ejs
@@ -13,6 +13,7 @@
       <p class="lead">ここに今日の復習一覧が表示されます。</p>
       <hr class="my-4">
       <p>新しく学んだ内容はこちらから登録できます</p>
+      <p>例)世界史教科書p32~p45</p>
       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#newStudyModal">勉強の登録</button>
     </div>
 
