--- a/views/study-contents.ejs
+++ b/views/study-contents.ejs
@@ -52,6 +52,7 @@
                 <input type="date" class="form-control" id="studyDate" name="studyDate" required>
               </div>
               <div class="modal-footer">
+                <button id="destroy" type="button" class="btn btn-danger" data-toggle="modal" data-target="#destroyModal">削除</button>
                 <button type="submit" class="btn btn-primary">保存</button>
               </div>
             </form>
@@ -59,6 +60,25 @@
         </div>
       </div>
     </div>
+
+    <!-- 削除確認モーダル -->
+    <div class="modal fade" id="destroyModal" tabindex="-1" aria-labelledby="destroyModal" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="destroyModal">この内容を削除しますか？</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body"></div>
+          <div class="modal-footer">
+            <a type="button" class="btn btn-danger" id="doneBtn">削除する</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
   </main>
 </body>
